--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -40,3 +40,6 @@
   color: var(--white);
   white-space: nowrap;
 }
+.btnDiv {
+  width: 276px;
+}
